Обновление UI окон чата.